src/frontend/src/assets/wakeci.scss
@tailwind base;
@tailwind components;
@tailwind utilities;

* {
    @apply transition-colors duration-300 box-border;
}

.CodeMirror * {
    @apply font-mono text-base dark:bg-secondary dark:text-gray-light;
    .cm-atom {
        @apply dark:text-primary-light text-primary;
    }
}

@layer utilities {
    .desktop-only {
        @apply max-no-desktop:hidden;
    }
}

html, body {
    overflow: hidden;
}

h1 {
    @apply text-3xl font-bold;
}

h2 {
    @apply text-2xl font-bold;
}

h3 {
    @apply text-xl font-bold text-primary-dark;
}

a {
    @apply text-primary flex items-center gap-1 hover:underline;
}

.btn {
    @apply px-2 py-1 rounded cursor-pointer flex items-center justify-center gap-2 no-underline;
    &.btn-primary {
        @apply bg-primary text-white hover:bg-primary-dark;
    }
    &.small {
        @apply px-2 py-1 rounded text-sm gap-1;
    }
    &.btn-secondary {
        @apply bg-secondary text-white hover:bg-secondary-dark;
    }
    &.btn-danger {
        @apply bg-danger text-white hover:bg-danger-dark;
    }
    &.btn-success {
        @apply bg-success text-white hover:bg-success-dark;
    }
}

input {
    @apply px-2 py-1 rounded ring-1 ring-gray-border focus:ring-gray-border-dark text-base dark:text-primary-light dark:ring-primary-light dark:focus:ring-primary bg-transparent;
    &::placeholder {
        @apply text-gray-border dark:text-primary-light;
    }
    &.small {
        @apply p-1 rounded text-sm;
    }
}

.form-item {
    @apply flex flex-col gap-0.5 my-2;
    label {
        @apply text-secondary-dark text-sm dark:text-primary-light;
    }
}

.table {
    @apply table-auto border border-primary-light dark:border-primary rounded-md border-separate bg-white;
    thead {
        @apply bg-primary-light text-primary-dark;
        th {
            @apply text-primary font-bold text-left p-2 border-primary border rounded;
        }
    }
    tr {
        @apply px-2 py-1 border-b border-primary-light bg-white dark:bg-primary-light;
        &:nth-child(odd) {
            @apply bg-gray-light;
        }
        td {
            @apply px-2 py-1;
        }
    }
}

.my-noty {
    @apply rounded-sm p-2 my-1 border;
    .notification-content {
        @apply text-sm;
    }
    &.success {
        @apply bg-success-light/90 text-success-dark border-success;
    }
    &.error {
        @apply bg-danger-light/90 text-danger-dark border-danger;
    }
    &.info {
        @apply bg-info-light/90 text-info-dark border-info;
    }
    &.warn {
        @apply bg-warning-light/90 text-warning-dark border-warning;
    }
}

